Harden Risk domain invariants and project quality
Refuerza invariantes del dominio, encapsulación, robustez del ciclo de partida, parsers, reproducibilidad, CI y mantenimiento. Incluye regresiones adicionales y mantiene verde la matriz Linux, Windows y Docker.